# MOO

./: .gitignore  CMakeLists.txt  ConstructRadauIIA.py  Doxyfile  README.md  engine.cpp
backup_multiphase/: constantsB.data  constantsC.data  constantsC0.data  integrator.cpp  integrator.h  main.cpp  problem.h  util.h
data/: ConstructRadauIIA.py  radauConstantsB.data  radauConstantsC.data  radauConstantsC0.data  radauConstantsW.data  radauConstantsW0.data  test_hessian.py
include/interface/modelica/: main_opt.h
include/interfaces/openmodelica/: main_opt.h
scripts/: lagrange_interpolation.py  test_hessian.py
src/: block_sparsity.h  collocation.cpp  collocation.h  fixed_vector.h  gdop.cpp  gdop.h  linalg.cpp  linalg.h  main.cpp  mesh.cpp  mesh.h  nlp.cpp  nlp.h  nlp_state.h  problem.h  scaler.h  util.h
src/base/: block_sparsity.h  collocation.cpp  collocation.h  constants.h  fLGR.cpp  fLGR.h  fixed_vector.h  linalg.cpp  linalg.h  log.h  mesh.cpp  mesh.h  nlp_state.h  nlp_structs.h  observer.h  scaler.h  trajectory.cpp  trajectory.h  util.h
src/gdop/: gdop.h  problem.h
src/impl/gdop/: _gdop.md  gdop.cpp  gdop.h  problem.h  test.c  test.h  test_problem_impl.cpp  test_problem_impl.h
src/interfaces/: ipopt_adapter.cpp  ipopt_adapter.h  ipopt_solver.cpp  ipopt_solver.h  nlp.h  nlp_solver.h  scaler.h
src/interfaces/c/: problem.cpp  problem.h  structures.h
src/interfaces/gdopt/: TODO  generated.c  generated.h  main_gdopt.cpp  main_gdopt.h
src/interfaces/modelica/: main_opt.cpp
src/interfaces/openmodelica/: debug.cpp  debug.h  debug_om.cpp  debug_om.h  evaluations.cpp  evaluations.h  gdop_problem.cpp  gdop_problem.h  gdop_problem_impl.cpp  gdop_problem_impl.h  helper.h  info.cpp  info.h  info_gdop.cpp  info_gdop.h  main_opt.cpp  print_data_structures_om.cpp  problem.cpp  problem.h  scaling.cpp  scaling.h  sim_runtime_ext.cpp  sim_runtime_ext.h  strategies.cpp  strategies.h
src/modelica/: log_jac
src/modelica/example/: CMakeLists.txt  include_test  include_test.c  include_test.makefile  include_test.mo  include_test_01exo.c  include_test_02nls.c  include_test_03lsy.c  include_test_04set.c  include_test_05evt.c  include_test_06inz.c  include_test_07dly.c  include_test_08bnd.c  include_test_09alg.c  include_test_10asr.c  include_test_11mix.c  include_test_12jac.c  include_test_12jac.h  include_test_13opt.c  include_test_13opt.h  include_test_13opt_new_functions.c  include_test_14lnz.c  include_test_15syn.c  include_test_16dae.c  include_test_16dae.h  include_test_17inl.c  include_test_18spd.c  include_test_functions.c  include_test_functions.h  include_test_info.json  include_test_init.xml  include_test_model.h  include_test_opt.c  include_test_prof.intdata  include_test_prof.realdata  include_test_records.c  include_test_res.mat  run.mos
src/nlp/: nlp.cpp  nlp.h  nlp_scaling.cpp  nlp_scaling.h  nlp_solver.h
src/nlp/instances/gdop/: gdop.cpp  gdop.h  gdop_info.md  gdop_orchestrator.cpp  gdop_orchestrator.h  gdop_strategies.cpp  gdop_strategies.h  orchestrator.cpp  orchestrator.h  problem.cpp  problem.h  strategies.cpp  strategies.h  test_problem_impl.cpp  test_problem_impl.h
src/nlp/solvers/: nlp_solver_flags.cpp  nlp_solver_flags.h  nlp_solver_settings.cpp  nlp_solver_settings.h
src/nlp/solvers/ipopt/: adapter.cpp  adapter.h  ipopt_adapter.cpp  ipopt_adapter.h  ipopt_solver.cpp  ipopt_solver.h  solver.cpp  solver.h
src/simulation/integrator/: builder.h  integrator.cpp  integrator.h
src/simulation/radau/: radau_builder.cpp  radau_builder.h  radau_integrator.cpp  radau_integrator.h  test.cpp  test.h  wrapper.cpp  wrapper.h
src/simulation/radau5/: test.cpp  test.h  wrapper.cpp  wrapper.h
stashed/: observer_ptr.h
stashed/batch/: main.cpp  test_problem_impl.cpp  test_problem_impl.h
stashed/steady_state/: parameter_test.cpp  parameter_test.h  test_problem_impl.cpp  test_problem_impl.h
